# garth

./: .coderabbit.yaml  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  sleep.ipynb  stress.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: auth-issue.yml  bug.yml  config.yml  feature.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  publish.yml  pylint.yml
colab/: sleep.ipynb
colabs/: chatgpt_analysis_of_stats.ipynb  sleep.ipynb  stress.ipynb
debug/: debug_http_requests.py
docs/: configuration.md  contributing.md  examples.md  getting-started.md  index.md  mcp.md  telemetry.md
docs/api/: connect-api.md  data.md  scores.md  stats.md  training.md  user.md
garth/: __init__.py  auth_token.py  auth_tokens.py  client.py  exc.py  http.py  sso.py  stats.py  utils.py  version.py
garth/data/: __init__.py  _base.py  activity.py  hrv.py  sleep.py
garth/resources/: __init__.py  hrv.py  intensity_minutes.py  sleep.py  steps.py  stress.py
garth/stats/: __init__.py  _base.py  hrv.py  hydration.py  intensity_minutes.py  sleep.py  steps.py  stress.py
garth/users/: __init__.py  profile.py  settings.py
notebooks/: sleep.ipynb  stress.ipynb
src/garth/: __init__.py  auth_tokens.py  cli.py  exc.py  http.py  sso.py  telemetry.py  typing.py  utils.py  version.py
src/garth/data/: __init__.py  _base.py  activity.py  badge.py  body_battery.py  body_battery_events.py  daily_body_battery_stress.py  daily_sleep_data.py  daily_summary.py  fitness_stats.py  garmin_scores.py  heart_rate.py  hrv.py  morning_training_readiness.py  sleep.py  training_readiness.py  weight.py
src/garth/stats/: __init__.py  _base.py  hrv.py  hydration.py  intensity_minutes.py  sleep.py  steps.py  stress.py  training_status.py
src/garth/users/: profile.py  settings.py
tests/: conftest.py  test_auth_token.py  test_auth_tokens.py  test_cli.py  test_http.py  test_sso.py  test_telemetry.py  test_users.py  test_utils.py
tests/cassettes/: test_client_get.yaml  test_client_post.yaml  test_client_request.yaml  test_connectapi.yaml  test_connectapi_refresh.yaml  test_delete_api.yaml  test_download.yaml  test_exchange.yaml  test_get_username.yaml  test_login_command.yaml  test_login_email_password_fail.yaml  test_login_fail.yaml  test_login_mfa_fail.yaml  test_login_return_on_mfa.yaml  test_login_success.yaml  test_login_success_mfa.yaml  test_login_success_mfa_async.yaml  test_profile_alias.yaml  test_put.yaml  test_put_api.yaml  test_refresh.yaml  test_refresh_expired.yaml  test_refresh_oauth2_token.yaml  test_resume_login.yaml  test_telemetry_enabled_request.yaml  test_upload.yaml  test_user_profile.yaml  test_user_settings_sleep_windows.yaml  test_user_setttings.yaml  test_username.yaml
tests/data/: test_activity.py  test_badge.py  test_body_battery_data.py  test_daily_sleep_data.py  test_daily_summary.py  test_fitness_stats.py  test_garmin_scores.py  test_heart_rate.py  test_hrv_data.py  test_morning_training_readiness.py  test_sleep_data.py  test_training_readiness.py  test_weight_data.py
tests/data/cassettes/: test_activity_get.yaml  test_activity_list.yaml  test_activity_list_pagination.yaml  test_activity_update.yaml  test_activity_update[both].yaml  test_activity_update[description_only].yaml  test_activity_update[name_only].yaml  test_badge_get.yaml  test_badge_list.yaml  test_body_battery_data_get.yaml  test_body_battery_data_list.yaml  test_body_battery_properties_edge_cases.yaml  test_daily_body_battery_stress_get.yaml  test_daily_body_battery_stress_get_incomplete_data.yaml  test_daily_body_battery_stress_get_no_data.yaml  test_daily_body_battery_stress_list.yaml  test_daily_heart_rate_get.yaml  test_daily_heart_rate_list.yaml  test_daily_heart_rate_readings.yaml  test_daily_sleep_data_get.yaml  test_daily_sleep_data_list.yaml  test_daily_summary_get.yaml  test_daily_summary_list.yaml  test_fitness_activity_list.yaml  test_garmin_scores_data_get.yaml  test_garmin_scores_data_list.yaml  test_get_manual_weight_data.yaml  test_get_nonexistent_weight_data.yaml  test_hrv_data_get.yaml  test_hrv_data_list.yaml  test_morning_training_readiness_data_get.yaml  test_morning_training_readiness_data_list.yaml  test_sleep_data_get.yaml  test_sleep_data_list.yaml  test_training_readiness_data_get.yaml  test_training_readiness_data_list.yaml  test_weight_data_list.yaml  test_weight_data_list_empty.yaml  test_weight_data_list_single_day.yaml  test_weight_data_timestamps_preserved.yaml
tests/resources/: test_hrv.py  test_intensity_minutes.py  test_sleep.py  test_stress.py
tests/resources/cassettes/: test_daily.yaml  test_daily_intensity_minutes.yaml  test_daily_pagination.yaml  test_daily_sleep.yaml  test_daily_steps.yaml  test_sleep_data_get.yaml  test_weekly.yaml  test_weekly_beyond_data.yaml  test_weekly_intensity_minutes.yaml  test_weekly_steps.yaml  test_weekly_stress_pagination.yaml
tests/stats/: test_hrv.py  test_hydration.py  test_intensity_minutes.py  test_sleep.py  test_sleep_stats.py  test_steps.py  test_stress.py  test_training_status.py
tests/stats/cassettes/: test_daily_hrv.yaml  test_daily_hrv_no_results.yaml  test_daily_hrv_paginate.yaml  test_daily_hrv_paginate_no_results.yaml  test_daily_hydration.yaml  test_daily_hydration_log.yaml  test_daily_hydration_log_default_timestamp.yaml  test_daily_intensity_minutes.yaml  test_daily_sleep.yaml  test_daily_steps.yaml  test_daily_stress.yaml  test_daily_stress_pagination.yaml  test_daily_training_status.yaml  (+10 more)
(+8 files in other folders)
